vote-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
spec:
  selector:
    app: vote-service
  ports:
  - port: 8080
    targetPort: 8080
