vote-service/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-service
spec:
  hosts:
  - voteservice.com
  gateways:
  - vote-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: vote-service.default.svc.cluster.local
